--- a/opdracht-1/index.html
+++ b/opdracht-1/index.html
@@ -10,7 +10,7 @@
     <div class="wrapper">
         <header>
             <nav>
-                <ul>
+                <ul class="ul-color">
                     <li><a href="#">About</a></li>
                     <li><a href="#">Articles</a></li>
                     <li><a href="#">Places</a></li>
@@ -19,7 +19,7 @@
             </nav>
         </header>
 
-        <img src="assets/header-image.jpg" alt="Tutti">
+        <img id="widht-text" src="assets/header-image.jpg" alt="Tutti">
 
         <main>
             <h1>Latest Articles</h1>
@@ -35,7 +35,7 @@
             <div>
                 <div class="places-to-visit">
                     <h2>Best places to visit</h2>
-                    <ul>
+                    <ul class="ul-color">
                         <li>Nulla lacus risus, laoreet tempus</li>
                         <li>Praesent sit amet auctor sapien sit amet</li>
                         <li>Aenean sit amet quam leo etiam</li>
@@ -52,7 +52,7 @@
         </main>
 
         <footer>
-            <span>&copy;2020 Ciao Tutti Blog</span>
+            <span class="text-size">&copy;2020 Ciao Tutti Blog</span>
         </footer>
     </div>
 </body>
